--- a/assets/sass/pages/post/_single.scss
+++ b/assets/sass/pages/post/_single.scss
@@ -134,6 +134,18 @@
   }
 }
 
+.entry-footer {
+    .share {
+   width: 100%;
+   text-align: center;
+   font-size: 1.25em;
+    
+   a {
+     margin: 0 0.5em;
+   }
+  }
+}
+
 .posts-navigation {
   margin-bottom: 4em;
   max-width: $max_size__site-main;
