completed navigation styles (only woocommerce support missing)

--- a/assets/sass/components/_navigation-1.scss
+++ b/assets/sass/components/_navigation-1.scss
@@ -1,52 +1,107 @@
-.main-navigation {
+#mobile-navigation {
 	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+
+
+	.mobile-menu-container {
+		width: 100%;
+		background-color: white;
+		display: none;
+		border-bottom: 1px solid #eeeeee;
+
+		.menu {
+			padding-left: 0;
+		}
+
+		li.social-item, li.mbt-item {
+			display: none;
+		}
+		li.mbt-item.newsletter-popup {
+			display: block;
+		}
+
+		.sub-menu {
+			display: none;
+		}
+	}
+
+	.menu-toggle {
+		span {
+			font-size: 0.33em;
+			letter-spacing: 0.08em;
+			vertical-align: middle;
+			margin-left: 0.875em;
+		}
+
+		i {
+			font-size: 0.875em;
+			line-height: 0.65em;
+			vertical-align: middle;
+		}
+	}
+
+	.search-icon {
+		font-size: 1.35em;
+		margin: 1em;
+		vertical-align: middle;
+	}
+
+}
+
+.site-header {
+	padding: 0 2em;
+}
+
+.main-navigation {
+	display: none;
 	justify-content: space-around;
 	align-items: center;
 	width: 100%;
 	font: $font__menu;
 	padding: 1em;
 
-	&.slide {
-		flex-direction: column;
-	}
+	// &.slide {
+	// 	flex-direction: column;
+	// }
 
-	&.toggled.slide {
-		.menu {
-			display: block;
-			position: relative;
-			height: auto;
-		}
-	}
+	// &.toggled.slide {
+	// 	.menu {
+	// 		display: block;
+	// 		position: relative;
+	// 		height: auto;
+	// 	}
+	// }
 
-	&.toggled.fullwidth {
-		height: auto;
-		min-height: 100vh;
-		display: block;
-		z-index: 7777;
+	// &.toggled.fullwidth {
+	// 	height: auto;
+	// 	min-height: 100vh;
+	// 	display: block;
+	// 	z-index: 7777;
 
-		.menu-container {
-			display: flex;
-			width: 100%;
-		}
+	// 	.menu-container {
+	// 		display: flex;
+	// 		width: 100%;
+	// 	}
 
-		.searchform {
-			margin-top: 1.5em;
-			justify-content: center;
+	// 	.searchform {
+	// 		margin-top: 1.5em;
+	// 		justify-content: center;
 
-			input {
-				width: 80%;
-			}
-		}
+	// 		input {
+	// 			width: 80%;
+	// 		}
+	// 	}
 
-		.social-media-icons {
-			margin: 1.875em 0 2em 0;
-			display: block;
-		}
+	// 	.social-media-icons {
+	// 		margin: 1.875em 0 2em 0;
+	// 		display: block;
+	// 	}
 
-		#primary-menu {
-			margin: 1em auto;
-		}
-	}
+	// 	#primary-menu {
+	// 		margin: 1em auto;
+	// 	}
+	// }
 
 	.menu-toggle {
 		display: block;
@@ -70,19 +125,19 @@
 	}
 
 	.menu-container, .menu {
-		display: none;
-		text-align: center;
-		padding: 3.25em 1.5em;
-		position: fixed;
-		top: 0;
-		left: 0;
-		width: 100%;
-		height: 100vh;
-		background-color: rgba(255,255,255,0.9);
-		justify-content: center;
-		flex-direction: column;
-		width: auto;
-		flex: 1;
+		// display: none;
+		// text-align: center;
+		// padding: 3.25em 1.5em;
+		// position: fixed;
+		// top: 0;
+		// left: 0;
+		// width: 100%;
+		// height: 100vh;
+		// background-color: rgba(255,255,255,0.9);
+		// justify-content: center;
+		// flex-direction: column;
+		// width: auto;
+		// flex: 1;
 
 		// Menu Items
 		ul {
@@ -144,7 +199,7 @@
 		a {
 			display: block;
 			text-decoration: none;
-			text-align: center;
+			text-align: left;
 			color: $color__primary;
 
 			i {
@@ -185,11 +240,23 @@
 ------------------
 */
 @include breakpoint(tablet) {
+	#mobile-navigation {
+		display: none;
+	}
+
 	.admin-bar .main-navigation {
     	top: 0px;
 	}
 
+	.site-header {
+		margin: 2em auto 3em auto;
+	}
+	#site-navigation + .site-header {
+		margin-top: 3em;
+	}
+
 	.main-navigation {
+	display: block;
 	clear: both;
 	width: 100%;
 	position: relative;
@@ -207,7 +274,7 @@
 			display: flex;
 			flex-direction: row;
 			align-items: center;
-			justify-content: flex-start;
+			justify-content: center;
 			flex-wrap: wrap;
 			position: relative;
 			background-color: transparent;
@@ -242,6 +309,7 @@
 
 					li {
 						text-align: center;
+						padding: 0.75em;
 
 						&:hover > ul,
 						&.focus > ul {
@@ -264,6 +332,27 @@
 
 			li {
 				position: relative;
+				padding: 0.2em 1.5em;
+
+				&.social-item + .social-item {
+					padding-left: 0;
+				}
+
+				// &.social-item + .mbt-item {
+				// 	padding-left: 0;
+				// }
+
+				// &.mbt-item + .social-item {
+				// 	padding-left: 0;
+				// }
+
+				&.mbt-item + .mbt-item {
+					padding-left: 0;
+				}
+
+				i {
+					vertical-align: middle;
+				}
 
 				&:hover > a,
 				&.focus > a {
@@ -272,6 +361,7 @@
 
 			a {
 				text-decoration: none;
+				text-align: center;
 				display: inline-block;
 				vertical-align: middle;
 			}
@@ -321,7 +411,15 @@
 			}
 		}
 	}
+	
+	.sub-navigation {
+		position: sticky;
+		top: 0;
+		z-index: 9999;
+		background-color: white;
+	}
 }
+
 
 .comment-navigation,
 .posts-navigation,
@@ -360,7 +458,7 @@
 /* Sub-Navigation 
 --------------------- */
 .main-navigation.sub-navigation {
-	margin-top: 2em;
+	margin: 1em auto 2em auto;
 
 	.menu {
 		ul {
