--- a/assets/sass/base/_mixins-master.scss
+++ b/assets/sass/base/_mixins-master.scss
@@ -34,6 +34,9 @@
   @else if $point == "desktop" {
     @media (min-width: 64em)  { @content; }
   }
+  @else {
+    @media (min-width: $point) { @content; }
+  }
 }
 
 /* Menu and other small stuff font style */
