--- a/assets/sass/components/_slider-1.scss
+++ b/assets/sass/components/_slider-1.scss
@@ -2,8 +2,7 @@
 *
 * Slider Type 1
 *
-* One slide fullwidth slider 
-* (adapted to overall top container width)
+* One slide fullwidth/content-width slider 
 *
 */
 .slick {
@@ -147,5 +146,53 @@ article.slick-slide {
 		top: 50%;
 		right: 30px;
 		display: block;
+	}
+}
+
+
+// Overlay Slider
+.slick.slider-overlay {
+
+	article.slick-slide {
+		max-height: 470px;
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+		flex-direction: column;
+		justify-content: center;
+
+		@include breakpoint(tablet) {
+			flex-direction: row;
+			justify-content: flex-start;
+		}
+
+		.entry-thumbnail {
+			width: 100%;
+			max-height: 470px;
+
+			@include breakpoint(tablet) {
+				width: 60%;
+			}
+		}
+
+		.entry-header {
+			width: 90%;
+			margin-top: -1em;
+			position: relative;
+			z-index: 7744;
+			top: auto;
+			bottom: auto;
+			left: auto;
+
+			@include breakpoint(tablet) {
+				width: 50%;
+				position: absolute;
+				top: 50%;
+				transform: translateY(-50%);
+				background-color: #f4f4f4;
+				margin-top: 0;
+				right: 0;
+			}
+		}
 	}
 }
