--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -45,6 +45,7 @@
     right: 20px;
     font-size: 2em;
     cursor: pointer;
+    padding: 0.4em;
   }
 }
 
@@ -54,7 +55,7 @@
 
 .site-header {
 	text-align: center;
-  margin-top: 0;
+  margin: 0 auto;
   width: auto;
   justify-content: flex-start;
   flex: 1;
