--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -71,6 +71,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.io/normalize.css/
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
+@import "components/mobile-navigation";
 @import "components/navigation-1";
 // @import "components/navigation-2";
 
