--- a/assets/sass/components/_navigation-2.scss
+++ b/assets/sass/components/_navigation-2.scss
@@ -1,256 +1,3 @@
-#mobile-navigation {
-	display: flex;
-	justify-content: space-between;
-	flex-wrap: wrap;
-
-
-	.mobile-menu-container {
-		width: 100%;
-		background-color: white;
-		display: none;
-		border-bottom: 1px solid #eeeeee;
-
-		.menu {
-			padding-left: 0;
-		}
-
-		li.social-item, li.mbt-item {
-			display: none;
-		}
-		li.mbt-item.newsletter-popup {
-			display: block;
-		}
-
-		.sub-menu {
-			display: none;
-		}
-	}
-
-	.menu-toggle {
-		span {
-			font-size: 0.33em;
-			letter-spacing: 0.08em;
-			vertical-align: middle;
-			margin-left: 0.875em;
-		}
-
-		i {
-			font-size: 0.875em;
-			line-height: 0.65em;
-			vertical-align: middle;
-		}
-	}
-
-	.search-icon {
-		font-size: 1.35em;
-		margin: 1em;
-		vertical-align: middle;
-	}
-
-}
-
-.site-header {
-	padding: 0 2em;
-}
-
-.header-container {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin-top: 1em;
-
-	@include breakpoint(tablet) {
-		position: sticky;
-		top: 0;
-		z-index: 999;
-		background-color: white;
-	}
-}
-
-#left-navigation, #right-navigation {
-	display: none;
-}
-
-.main-navigation {
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-	width: 100%;
-	font: $font__menu;
-	padding: 1em;
-	flex: 1;
-
-	// &.slide {
-	// 	flex-direction: column;
-	// }
-
-	// &.toggled.slide {
-	// 	.menu {
-	// 		display: block;
-	// 		position: relative;
-	// 		height: auto;
-	// 	}
-	// }
-
-	// &.toggled.fullwidth {
-	// 	height: auto;
-	// 	min-height: 100vh;
-	// 	display: block;
-	// 	z-index: 7777;
-
-	// 	.menu-container {
-	// 		display: flex;
-	// 		width: 100%;
-	// 	}
-
-	// 	.searchform {
-	// 		margin-top: 1.5em;
-	// 		justify-content: center;
-
-	// 		input {
-	// 			width: 80%;
-	// 		}
-	// 	}
-
-	// 	.social-media-icons {
-	// 		margin: 1.875em 0 2em 0;
-	// 		display: block;
-	// 	}
-
-	// 	#primary-menu {
-	// 		margin: 1em auto;
-	// 	}
-	// }
-
-	.menu-toggle {
-		display: block;
-		position: relative;
-		width: auto;
-		text-align: center;
-		border: none;
-		background: none;
-		padding: 0 0.5em;
-		font-size: 2.5em;
-		color: $color__primary;
-		margin: 0;
-		z-index: 999;
-	}
-
-	.close.icon-delete {
-		margin: 1em auto;
-		color: $color__primary;
-		cursor: pointer;
-	}
-
-	.menu-container, .menu {
-		// display: none;
-		// text-align: center;
-		// padding: 3.25em 1.5em;
-		// position: fixed;
-		// top: 0;
-		// left: 0;
-		// width: 100%;
-		// height: 100vh;
-		// background-color: rgba(255,255,255,0.9);
-		// justify-content: center;
-		// flex-direction: column;
-		// width: auto;
-		// flex: 1;
-
-		// Menu Items
-		ul {
-			list-style: none;
-			margin: 0;
-			padding-left: 0;
-			height: auto;
-			width: 100%;
-
-			ul {
-				position: relative;
-				top: 0;
-				left: 0;
-				z-index: 99999;
-				padding: 10px 0px 20px 0px;
-				height: auto;
-				display: none;
-
-				ul {
-					left: 0;
-					top: 0;
-				}
-
-				li {
-
-					&:hover > ul,
-					&.focus > ul {
-						left: 0;
-					}
-				}
-
-				:hover > a,
-				.focus > a {
-				}
-
-				a:hover,
-				a.focus {
-				}
-			}
-
-			li:hover > ul,
-			li.focus > ul {
-				left: auto;
-			}
-		}
-
-		li {
-			position: relative;
-			display: block;
-			padding: 1em 1.5em;
-			letter-spacing: 0.05em;
-			font-size: 0.975em;
-
-			&:hover > a,
-			&.focus > a {
-			}
-		}
-
-		a {
-			display: block;
-			text-decoration: none;
-			text-align: left;
-			color: $color__primary;
-
-			i {
-				margin-left: 0.45em;
-
-				&.icon-down, &.icon-up {
-					font-size: 1.2em;
-					vertical-align: middle;
-
-					// @include breakpoint(tablet) {
-					// 	display: none;
-					// }
-				}
-			}
-		}
-	}
-
-	.social-search-container {
-		display: flex;
-		align-items: center;
-		flex: 1;
-		justify-content: flex-end;
-		
-		.social-media-icons {
-			display: none;
-		}
-
-		.searchform i {
-			margin-right: 0.5em;
-		}
-	}
-}
-
 
 
 /*
@@ -306,16 +53,16 @@
 			height: auto;
 			padding: 0;
 
-			ul {
-				display: flex;
-				flex-direction: row;
-				flex-wrap: wrap;
-				align-items: center;
-				list-style: none;
-				margin: 0;
-				padding-left: 0;
-				height: auto;
-				width: 100%;
+			// ul {
+			// 	display: flex;
+			// 	flex-direction: row;
+			// 	flex-wrap: wrap;
+			// 	align-items: center;
+			// 	list-style: none;
+			// 	margin: 0;
+			// 	padding-left: 0;
+			// 	height: auto;
+			// 	width: 100%;
 
 				ul {
 					float: left;
@@ -326,6 +73,7 @@
 					display: inline-block;
 					background-color: $color__secondary;
 					opacity: 0;
+					transition: 0.5s opacity ease-in-out;
 
 					ul {
 						left: -999em;
@@ -357,9 +105,14 @@
 					left: 50%;
 					transform: translateX(-50%);
 					width: 200px;
+					transition: 0.5s all ease-in-out;
 					opacity: 1;
+
+					li:hover {
+						opacity: 0.7;
+					}
 				}
-			}
+			//}
 
 			li {
 				position: relative;
@@ -384,6 +137,10 @@
 				&.focus > a {
 				}
 
+				&:hover {
+					opacity: 0.8;
+				}
+
 				i {
 					vertical-align: middle;
 				}
@@ -392,7 +149,7 @@
 			a {
 				text-decoration: none;
 				display: inline-block;
-				vertical-align: middle;
+				vertical-align: bottom;
 			}
 
 			.current_page_item > a,
