--- a/assets/sass/components/_slider-1.scss
+++ b/assets/sass/components/_slider-1.scss
@@ -9,6 +9,10 @@
 	margin: 0 auto;
 }
 
+#sub-navigation + .slick-slider:not(.small-width) {
+	margin-top: -2em;
+}
+
 article.slick-slide {
 	width: 100%;
 	position: relative;
@@ -25,10 +29,16 @@ article.slick-slide {
 	
 	.entry-thumbnail {
 		width: 100%;
-		height: 550px;
+		height: 250px;
+
+		@include breakpoint(smartphone) {
+			width: 100%;
+			height: 350px;
+		}
 
 		@include breakpoint(tablet) {
 			width: 100%;
+			height: 550px;
 		}
 
 		img {
@@ -40,20 +50,25 @@ article.slick-slide {
 
 	.entry-header {
 		width: 100%;
-		max-width: 80%;
+		max-width: 50%;
 		padding: 3em 3.5em;
 		color: $color__primary;
 		background-color: white;
 		position: absolute;
 		bottom: 15%;
-		left: 50%;
+		left: 30%;
 		transform: translateX(-50%);
 		z-index: 9955;
+		display: none;
+
+		@include breakpoint(smartphone) {
+			display: block;
+		}
 
 		@include breakpoint(tablet) {
-			max-width: 35%;
 			left: 10%;
 			transform: none;
+			max-width: 35%;
 		}
 
 		.entry-title {
@@ -113,39 +128,27 @@ article.slick-slide {
 	}
 }
 
-.slick-navigation {
-	color: $color__primary;
-	font-size: 2.75em;
-	cursor: pointer;
-
-	.prev {
-		left:0px;
-		@include slider-arrows();
-
-	}
-	.next {
-		right:0px;
-		@include slider-arrows();
-	}
-}
-
-.next-slide {
+.slick-arrow {
 	position: absolute;
-	top: 85%;
-	right: 15px;
+	top: 50%;
 	transform: translate(0,-50%);
 	font-size: 2em;
 	cursor: pointer;
-	display: none!important;
+	z-index: 9999;
+	opacity: 0;
+	transition: opacity 0.5s ease-in-out;
+}
 
-	&:before {
-		display: block;
-	}
+.next-slide {
+	right: 30px;
+}
+.prev-slide {
+	left: 30px;
+}
 
-	@include breakpoint(tablet) {
-		top: 50%;
-		right: 30px;
-		display: block;
+@include breakpoint(tablet) {
+	.slick:hover .slick-arrow {
+		opacity: 1;
 	}
 }
 
@@ -192,6 +195,7 @@ article.slick-slide {
 				background-color: #f4f4f4;
 				margin-top: 0;
 				right: 0;
+				max-width: 50%;
 			}
 		}
 	}
