--- a/assets/sass/components/_widgets.scss
+++ b/assets/sass/components/_widgets.scss
@@ -254,6 +254,41 @@
 			text-align: center;
 		}
 	}
+
+	&.col-2 {
+		article {
+			@include breakpoint(smartphone) {
+				width: 49%;
+			}
+		}
+	}
+	&.col-6, &.col-9 {
+		article {
+			@include breakpoint(smartphone) {
+				width: 32%;
+			}
+		}
+	}
+	&.col-4, &.col-8 {
+		article {
+			@include breakpoint(smartphone) {
+				width: 49%;
+			}
+			@include breakpoint(tablet) {
+				width: 24%;
+			}
+		}
+	}
+	&.col-5, &.col-10 {
+		article {
+			@include breakpoint(smartphone) {
+				width: 49%;
+			}
+			@include breakpoint(tablet) {
+				width: 19%;
+			}
+		}
+	}
 }
 
 
@@ -754,6 +789,47 @@
 			a {
 				color: $color__primary;
 			}
+		}
+	}
+}
+
+
+/* Boxzilla Popup Newsletter
+------------------------------- */
+.boxzilla {
+	padding: 0!important;
+	overflow-y: hidden!important;
+
+	.boxzilla-content {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+
+		@include breakpoint(smartphone) {
+			flex-direction: row;
+		}
+	}
+
+	.first-child {
+		width: 100%;
+	}
+
+	.yikes-mailchimp-container {
+		width: 100%;
+		padding: 0.5em 1.5em;
+
+		.yikes-mailchimp-form-description {
+			margin-bottom: 1.5em;
+		}
+	}
+
+	@include breakpoint(smartphone) {
+		.first-child, .yikes-mailchimp-container {
+			width: 50%;
+		}
+
+		.first-child {
+			margin-bottom: -0.3em;
 		}
 	}
 }
