--- a/assets/sass/typography/_fonts.scss
+++ b/assets/sass/typography/_fonts.scss
@@ -64,135 +64,276 @@
   font-style: normal;
 }
 
-@charset "UTF-8";
+// @charset "UTF-8";
+// @font-face {
+//   font-family: "mps-icons";
+//   src:url("assets/fonts/mps-icons.eot");
+//   src:url("assets/fonts/mps-icons.eot?#iefix") format("embedded-opentype"),
+//     url("assets/fonts/mps-icons.woff") format("woff"),
+//     url("assets/fonts/mps-icons.ttf") format("truetype"),
+//     url("assets/fonts/mps-icons.svg#mps-icons") format("svg");
+//   font-weight: normal;
+//   font-style: normal;
+// }
+
+// [data-icon]:before {
+//   font-family: "mps-icons" !important;
+//   content: attr(data-icon);
+//   font-style: normal !important;
+//   font-weight: normal !important;
+//   font-variant: normal !important;
+//   text-transform: none !important;
+//   speak: none;
+//   line-height: 1;
+//   -webkit-font-smoothing: antialiased;
+//   -moz-osx-font-smoothing: grayscale;
+// }
+
+// [class^="icon-"]:before,
+// [class*=" icon-"]:before {
+//   font-family: "mps-icons" !important;
+//   font-style: normal !important;
+//   font-weight: normal !important;
+//   font-variant: normal !important;
+//   text-transform: none !important;
+//   speak: none;
+//   line-height: 1;
+//   -webkit-font-smoothing: antialiased;
+//   -moz-osx-font-smoothing: grayscale;
+// }
+
+// .icon-facebook:before {
+//   content: "\61";
+// }
+// .icon-arrow-right:before {
+//   content: "\63";
+// }
+// .icon-down:before {
+//   content: "\64";
+// }
+// .icon-up:before {
+//   content: "\65";
+// }
+// .icon-instagram:before {
+//   content: "\66";
+// }
+// .icon-pinterest-circle:before {
+//   content: "\67";
+// }
+// .icon-youtube:before {
+//   content: "\69";
+// }
+// .icon-delete:before {
+//   content: "\6b";
+// }
+// .icon-menu:before {
+//   content: "\6c";
+// }
+// .icon-left-slider:before {
+//   content: "\6d";
+// }
+// .icon-mail:before {
+//   content: "\6e";
+// }
+// .icon-right-slider:before {
+//   content: "\6f";
+// }
+// .icon-search:before {
+//   content: "\70";
+// }
+// .icon-down-arrow:before {
+//   content: "\71";
+// }
+// .icon-tumblr:before {
+//   content: "\72";
+// }
+// .icon-twitter:before {
+//   content: "\73";
+// }
+// .icon-youtube-1:before {
+//   content: "\74";
+// }
+// .icon-linkedin:before {
+//   content: "\75";
+// }
+// .icon-dribbble:before {
+//   content: "\76";
+// }
+// .icon-rss:before {
+//   content: "\77";
+// }
+// .icon-snapchat:before {
+//   content: "\78";
+// }
+// .icon-lastfm:before {
+//   content: "\79";
+// }
+// .icon-soundcloud:before {
+//   content: "\7a";
+// }
+// .icon-vimeo:before {
+//   content: "\41";
+// }
+// .icon-gplus:before {
+//   content: "\62";
+// }
+// .icon-home:before {
+//   content: "\6a";
+// }
+// .icon-heart:before {
+//   content: "\42";
+// }
+// .icon-heart-filled:before {
+//   content: "\43";
+// }
+// .icon-search-bold:before {
+//   content: "\68";
+// }
+// .icon-mail-bold:before {
+//   content: "\44";
+// }
+// .icon-pinterest:before {
+//   content: "\45";
+// }
+
+
 @font-face {
-  font-family: "mps-icons";
-  src:url("assets/fonts/mps-icons.eot");
-  src:url("assets/fonts/mps-icons.eot?#iefix") format("embedded-opentype"),
-    url("assets/fonts/mps-icons.woff") format("woff"),
-    url("assets/fonts/mps-icons.ttf") format("truetype"),
-    url("assets/fonts/mps-icons.svg#mps-icons") format("svg");
+  font-family: 'mbt-icons';
+  src:  url('assets/fonts/mbt-icons.eot?z2gzag');
+  src:  url('assets/fonts/mbt-icons.eot?z2gzag#iefix') format('embedded-opentype'),
+    url('assets/fonts/mbt-icons.ttf?z2gzag') format('truetype'),
+    url('assets/fonts/mbt-icons.woff?z2gzag') format('woff'),
+    url('assets/fonts/mbt-icons.svg?z2gzag#mbt-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
 
-[data-icon]:before {
-  font-family: "mps-icons" !important;
-  content: attr(data-icon);
-  font-style: normal !important;
-  font-weight: normal !important;
-  font-variant: normal !important;
-  text-transform: none !important;
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'mbt-icons' !important;
   speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
   line-height: 1;
+  
+  /* Enable Ligatures ================ */
+  letter-spacing: 0;
+  -webkit-font-feature-settings: "liga";
+  -moz-font-feature-settings: "liga=1";
+  -moz-font-feature-settings: "liga";
+  -ms-font-feature-settings: "liga" 1;
+  font-feature-settings: "liga";
+  -webkit-font-variant-ligatures: discretionary-ligatures;
+  font-variant-ligatures: discretionary-ligatures;
+
+  /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-[class^="icon-"]:before,
-[class*=" icon-"]:before {
-  font-family: "mps-icons" !important;
-  font-style: normal !important;
-  font-weight: normal !important;
-  font-variant: normal !important;
-  text-transform: none !important;
-  speak: none;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-.icon-facebook:before {
-  content: "\61";
-}
-.icon-arrow-right:before {
-  content: "\63";
-}
-.icon-down:before {
-  content: "\64";
-}
-.icon-up:before {
-  content: "\65";
-}
-.icon-instagram:before {
-  content: "\66";
-}
-.icon-pinterest-circle:before {
-  content: "\67";
-}
-.icon-youtube:before {
-  content: "\69";
-}
-.icon-delete:before {
-  content: "\6b";
-}
 .icon-menu:before {
-  content: "\6c";
-}
-.icon-left-slider:before {
-  content: "\6d";
-}
-.icon-mail:before {
-  content: "\6e";
-}
-.icon-right-slider:before {
-  content: "\6f";
-}
-.icon-search:before {
-  content: "\70";
-}
-.icon-down-arrow:before {
-  content: "\71";
-}
-.icon-tumblr:before {
-  content: "\72";
-}
-.icon-twitter:before {
-  content: "\73";
-}
-.icon-youtube-1:before {
-  content: "\74";
-}
-.icon-linkedin:before {
-  content: "\75";
-}
-.icon-dribbble:before {
-  content: "\76";
-}
-.icon-rss:before {
-  content: "\77";
-}
-.icon-snapchat:before {
-  content: "\78";
-}
-.icon-lastfm:before {
-  content: "\79";
-}
-.icon-soundcloud:before {
-  content: "\7a";
-}
-.icon-vimeo:before {
-  content: "\41";
-}
-.icon-gplus:before {
-  content: "\62";
-}
-.icon-home:before {
-  content: "\6a";
-}
-.icon-heart:before {
-  content: "\42";
-}
-.icon-heart-filled:before {
-  content: "\43";
+  content: "\e918";
 }
 .icon-search-bold:before {
-  content: "\68";
+  content: "\e901";
 }
-.icon-mail-bold:before {
-  content: "\44";
+.icon-keyboard_arrow_up:before {
+  content: "\e902";
+}
+.icon-keyboard_arrow_right:before {
+  content: "\e903";
+}
+.icon-keyboard_arrow_left:before {
+  content: "\e904";
+}
+.icon-keyboard_arrow_down:before {
+  content: "\e905";
+}
+.icon-facebook:before {
+  content: "\e900";
+}
+.icon-share:before {
+  content: "\e906";
+}
+.icon-chevron-circle-up:before {
+  content: "\e907";
+}
+.icon-chevron-circle-right:before {
+  content: "\e908";
+}
+.icon-chevron-circle-left:before {
+  content: "\e909";
+}
+.icon-chevron-circle-down:before {
+  content: "\e90a";
+}
+.icon-chevron-up:before {
+  content: "\e90b";
+}
+.icon-chevron-right:before {
+  content: "\e90c";
+}
+.icon-chevron-left:before {
+  content: "\e90d";
+}
+.icon-chevron-down:before {
+  content: "\e90e";
+}
+.icon-delete:before {
+  content: "\e90f";
+}
+.icon-shopping-bag:before {
+  content: "\e910";
+}
+.icon-arrow-right:before {
+  content: "\e911";
+}
+.icon-arrow-left:before {
+  content: "\e912";
+}
+.icon-arrow-down:before {
+  content: "\e913";
+}
+.icon-arrow-up:before {
+  content: "\e914";
+}
+.icon-envelope:before {
+  content: "\e915";
+}
+.icon-snapchat:before {
+  content: "\e916";
+}
+.icon-heart:before {
+  content: "\e917";
+}
+.icon-instagram:before {
+  content: "\ea92";
+}
+.icon-twitter:before {
+  content: "\ea96";
+}
+.icon-rss:before {
+  content: "\ea9b";
+}
+.icon-youtube-1:before {
+  content: "\ea9d";
+}
+.icon-vimeo:before {
+  content: "\eaa0";
+}
+.icon-dribbble:before {
+  content: "\eaa7";
+}
+.icon-soundcloud:before {
+  content: "\eac3";
+}
+.icon-linkedin:before {
+  content: "\eac9";
 }
 .icon-pinterest:before {
-  content: "\45";
+  content: "\ead1";
 }
+
 
